# Transport-Delay-Predictor

./: .env.example  .gitignore  Makefile  README.md  docker-compose.aws.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_weather_holidays_features.py
app/: __init__.py  config.py  main.py
app/api/: deps.py
app/api/routes/: delays.py  features.py  health.py  predict.py  predictions.py  stops.py  trips.py  vehicles.py
app/core/: database.py  logging.py  redis.py
app/models/: __init__.py  features.py  gtfs_static.py  holidays.py  observations.py  realtime.py  weather.py
app/schemas/: common.py  delays.py  features.py  prediction.py  stop.py  trip.py  vehicle.py
app/services/: bom_weather.py  cache.py  feature_pipeline.py  gtfs_realtime.py  gtfs_static.py  holidays.py  ml_inference.py  ml_predictor.py  predictor.py
app/workers/: celery_app.py  tasks.py
docker/: api.Dockerfile  postgres-init.sql  worker.Dockerfile
infra/scripts/: deploy.sh
infra/terraform/: README.md  ec2.tf  ecr.tf  iam.tf  outputs.tf  providers.tf  rds.tf  s3.tf  security_groups.tf  ssm.tf  user_data.sh.tftpl  variables.tf  vpc.tf
tests/: conftest.py  test_bom_parser.py  test_gtfs_static_parse.py  test_holidays_parser.py  test_ml_predictor.py  test_predict_endpoint.py  test_predictor_confidence.py  test_root.py
