[project]
name = "transport-delay-predictor"
version = "0.1.0"
description = "Public transport delay prediction API using TransLink Queensland GTFS-RT feeds."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "psycopg[binary]==3.2.3",
    "alembic==1.13.3",
    "geoalchemy2==0.15.2",
    "shapely==2.0.6",
    "redis==5.2.0",
    "celery[redis]==5.4.0",
    "httpx==0.27.2",
    "gtfs-realtime-bindings==1.0.0",
    "protobuf==4.25.5",
    "pandas==2.2.3",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "orjson==3.10.11",
    "python-multipart==0.0.17",
    "scikit-learn==1.5.2",
    "xgboost==2.1.2",
    "joblib==1.4.2",
    "numpy==1.26.4",
    "boto3==1.35.49",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.2",
    "ruff==0.7.2",
    "mypy==1.13.0",
    "types-protobuf==5.28.3.20241030",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "C4", "SIM", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
"alembic/*" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
